--- a/Report.qmd
+++ b/Report.qmd
@@ -543,9 +543,43 @@ The imported data sets were validated before being added to the database to ensu
 
 2.  ORDER_ITEM
 
+    Validation processes for ORDER_ITEM entity included:
+
+    ```{r}
+
+    ```
+
 3.  ORDER_DETAIL
 
+    Validation processes for ORDER_DETAIL entity included:
+
 4.  ADVERTISE_IN
+
+    Validation processes for ADVERTISE_IN entity included:
+
+    -   Check if the values of the composite primary key are unique
+
+    -   Check if there are any values of foreign keys, including ad_id and product_id, in the ADVERTISE_IN table that do not exist in the ADVERTISEMENT and PRODUCT table.
+
+    -   Remove unqualified data value
+
+    ```{r}
+    #Check duplicate for composite primary key
+    advertise_in_composite_key <- paste(advertise_in$ad_id, advertise_in$product_id)
+    duplicate_advertise_in_composite_key <- advertise_in[duplicated(advertise_in_composite_key), c("ad_id", "product_id")]
+
+    #Check if ad_id exists in the ADVERTISEMENT table
+    invalid_advertisement_fk <- advertise_in[!advertise_in$ad_id %in% advertisement$ad_id, "ad_id"]
+
+    #Check if product_id exists in the PRODUCT table
+    invalid_product_fk <- advertise_in[!advertise_in$product_id %in% product$product_id, c("ad_id", "product_id")]
+
+    #Remove unclean data
+    bad_advertise_in_record <- unique(c(duplicate_advertise_in_composite_key$ad_id,
+                                        invalid_advertisement_fk$ad_id,
+                                        invalid_product_fk$ad_id))
+    advertise_in <- advertise_in[!(advertise_in$ad_id %in% bad_advertise_in_record), ]
+    ```
 
 ## Part 3: Data Pipeline Generation
 
